--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,3 +11,7 @@ spring:
     show-sql: true # Set this to true to see SQL queries in the console
 infura-endpoint:
 private-key:
+
+## Liquibase change log location
+#liquibase:
+#  change-log: classpath:/db/changelog/db.changelog-master.yaml
