--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,5 @@ databaseChangeLog:
       file: db/changelog/changelog-1.2-create-declaration-table.yaml
   - include:
       file: db/changelog/changelog-1.3-create-tax-beneficiary-table.yaml
+  - include:
+      file: db/changelog/changelog-1.4-create-tax-beneficiary-details-table.yaml
