--- a/core/src/main/resources/application.yaml
+++ b/core/src/main/resources/application.yaml
@@ -15,6 +15,8 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
       ddl-auto: none # You can change this to create if you want to initialize the schema
     show-sql: true # Set this to true to see SQL queries in the console
   second-datasource:
