documant and declaration relations with user

--- a/core/src/main/resources/db/changelog/changelog-1.1-create-document-table.yaml
+++ b/core/src/main/resources/db/changelog/changelog-1.1-create-document-table.yaml
@@ -24,3 +24,6 @@ databaseChangeLog:
               - column:
                   name: file
                   type: VARCHAR(255)
+              - column:
+                  name: user_id
+                  type: VARCHAR(255)
