--- a/core/src/main/resources/db/changelog/changelog-1.2-create-declaration-table.yaml
+++ b/core/src/main/resources/db/changelog/changelog-1.2-create-declaration-table.yaml
@@ -26,3 +26,6 @@ databaseChangeLog:
               - column:
                   name: taxes
                   type: float
+              - column:
+                  name: user_id
+                  type: VARCHAR(255)
