taxes distribution declaration

--- a/core/src/main/resources/db/changelog/changelog-1.0-create-payment-received-event-table.yaml
+++ b/core/src/main/resources/db/changelog/changelog-1.0-create-payment-received-event-table.yaml
@@ -27,3 +27,6 @@ databaseChangeLog:
               - column:
                   name: block_number
                   type: BIGINT
+              - column:
+                  name: contract_address
+                  type: VARCHAR(255)
