--- a/core/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/core/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - include:
-      file: db/changelog/changelog-1.0.yaml
+      file: db/changelog/changelog-1.0-create-payment-received-event-table.yaml
   - include:
       file: db/changelog/changelog-1.1-create-document-table.yaml
   - include:
@@ -9,3 +9,7 @@ databaseChangeLog:
       file: db/changelog/changelog-1.3-create-tax-beneficiary-table.yaml
   - include:
       file: db/changelog/changelog-1.4-create-tax-beneficiary-details-table.yaml
+  - include:
+      file: db/changelog/changelog-1.5-create-taxes-distribution-declaration-table.yaml
+  - include:
+      file: db/changelog/changelog-1.6-create-tax-distribution-table.yaml
