--- a/core/src/main/resources/db/changelog/changelog-1.5-create-taxes-distribution-declaration-table.yaml
+++ b/core/src/main/resources/db/changelog/changelog-1.5-create-taxes-distribution-declaration-table.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 1
+      id: TaxDistributionDeclaration
       author: your_name
       changes:
         - createTable:
