--- a/core/src/main/resources/db/changelog/changelog-1.6-create-tax-distribution-table.yaml
+++ b/core/src/main/resources/db/changelog/changelog-1.6-create-tax-distribution-table.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 2
+      id: TaxDistribution
       author: owieckowicz
       changes:
         - createTable:
