default tax percentages for beneficiaries

--- a/core/src/main/resources/db/changelog/changelog-2.1-create-new-tax-beneficiary-table.yaml
+++ b/core/src/main/resources/db/changelog/changelog-2.1-create-new-tax-beneficiary-table.yaml
@@ -33,3 +33,6 @@ databaseChangeLog:
               - column:
                   name: smart_contract_address
                   type: VARCHAR(255)
+              - column:
+                  name: default_tax_percentage
+                  type: INT
