--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,10 @@
 			<artifactId>tika-core</artifactId>
 			<version>2.9.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 
 	</dependencies>
 
