--- a/Dockerfile-keycloak
+++ b/Dockerfile-keycloak
@@ -16,3 +16,4 @@ ENV KC_DB_SCHEMA=public
 #ENV KC_DB_PASSWORD=password
 #ENV KEYCLOAK_ADMIN=admin
 #ENV KEYCLOAK_ADMIN_PASSWORD=admin
+ENTRYPOINT ["/opt/keycloak/bin/kc.sh"]
