--- a/Dockerfile-keycloak
+++ b/Dockerfile-keycloak
@@ -1,4 +1,7 @@
-# Use the official Keycloak image as a base
+FROM maven:3.8.5-openjdk-17 as builder
+COPY . .
+RUN mvn package -pl spi -am -DskipTests
+
 FROM quay.io/keycloak/keycloak:22.0.1
 
 ENV KC_HEALTH_ENABLED=true
@@ -6,7 +9,7 @@ ENV KC_METRICS_ENABLED=true
 
 COPY ./core/src/main/resources/keycloak /opt/keycloak/data/import
 COPY ./themes /opt/keycloak/themes
-COPY ./spi/target/custom-spi.jar /opt/keycloak/providers/custom-spi.jar
+COPY --from=builder ./spi/target/custom-spi.jar /opt/keycloak/providers/custom-spi.jar
 
 ENV KC_DB=postgres
 #ENV KC_DB_URL_HOST=postgres-keycloak
