docker file update

--- a/Dockerfile-keycloak
+++ b/Dockerfile-keycloak
@@ -6,19 +6,15 @@ FROM quay.io/keycloak/keycloak:22.0.1
 
 ENV KC_HEALTH_ENABLED=true
 ENV KC_METRICS_ENABLED=true
+ENV PROXY_ADDRESS_FORWARDING=true
 
 COPY ./core/src/main/resources/keycloak /opt/keycloak/data/import
 COPY ./themes /opt/keycloak/themes
 COPY --from=builder ./spi/target/custom-spi.jar /opt/keycloak/providers/custom-spi.jar
 
 ENV KC_DB=postgres
-#ENV KC_DB_URL_HOST=postgres-keycloak
-#ENV KC_DB_URL_DATABASE=keycloak
-#ENV KC_DB_USERNAME=keycloak
 ENV KC_DB_SCHEMA=public
-#ENV KC_DB_PASSWORD=password
-#ENV KEYCLOAK_ADMIN=admin
-#ENV KEYCLOAK_ADMIN_PASSWORD=admin
+
 WORKDIR /opt/keycloak
 EXPOSE 8080
 ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start-dev --import-realm"]
