--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ on:
 env:
   AWS_REGION: eu-north-1                    # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: keycloak           # set this to your Amazon ECR repository name
-  ECS_SERVICE: pgf-service                 # set this to your Amazon ECS service name
+  ECS_SERVICE: keycloak-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: political-governance-framework                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: keycloak-task-definition.json # set this to the path to your Amazon ECS task definition
   # file, e.g. aws/task-definition.json
