--- a/Dockerfile-springboot
+++ b/Dockerfile-springboot
@@ -3,6 +3,12 @@ COPY . .
 RUN mvn package -pl core -am -DskipTests
 
 FROM openjdk:17-jdk-slim
+ARG ACCESS_ARG
+ARG SECRET_ARG
+ARG BUCKET_ARG
+ENV AWS_ACCESS_KEY=$ACCESS_ARG
+ENV AWS_SECRET_KEY=$SECRET_ARG
+ENV AWS_S3_BUCKET_NAME=$BUCKET_ARG
 COPY --from=builder core/target/core-0.0.1-SNAPSHOT.jar /target/
 EXPOSE 8081
 CMD java -jar /target/core-0.0.1-SNAPSHOT.jar
