spring deployment update

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ env:
   ECS_SPRING_SERVICE: spring-service
   ECS_CLUSTER: political-governance-framework
   ECS_KEYCLOAK_TASK_DEFINITION: keycloak-task-definition.json
-  ECS_SPRING_TASK_DEFINITION: keycloak-task-definition.json
+  ECS_SPRING_TASK_DEFINITION: spring-task-definition.json
   KEYCLOAK_CONTAINER_NAME: keycloak-container
   SPRING_CONTAINER_NAME: pgf-spring
 
