--- a/core/src/main/resources/application-dev.yaml
+++ b/core/src/main/resources/application-dev.yaml
@@ -10,7 +10,7 @@ spring:
   datasource:
     jdbcUrl:
     username:
-    password:
+    password: ${SPRING_DATASOURCE_PASSWORD}
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
