--- a/core/src/main/resources/application-dev.yaml
+++ b/core/src/main/resources/application-dev.yaml
@@ -11,6 +11,7 @@ spring:
     jdbcUrl: jdbc:postgresql://springboot.cynwbnwqgszz.eu-north-1.rds.amazonaws.com:5432/springboot
     username: oskar
     password: 98qq8fH5Xr5dnteoJ2
+    driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
