--- a/core/src/main/resources/application-dev.yaml
+++ b/core/src/main/resources/application-dev.yaml
@@ -8,9 +8,9 @@ spring:
           issuer-uri: http://localhost:8082/realms/political-governance
           jwk-set-uri: http://localhost:8082/realms/political-governance/protocol/openid-connect/certs
   datasource:
-    jdbcUrl: jdbc:postgresql://springboot.cynwbnwqgszz.eu-north-1.rds.amazonaws.com:5432/springboot
-    username: oskar
-    password: 98qq8fH5Xr5dnteoJ2
+    jdbcUrl:
+    username:
+    password:
     driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -24,6 +24,8 @@ spring:
     username:
     password:
     driver-class-name: org.postgresql.Driver
+    hibernate:
+      dialect: org.hibernate.dialect.PostgreSQLDialect
 
 infura-endpoint:
 eth-private-key:
