front url cors and coin api call fix

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ permissions:
 
 jobs:
   deploy:
-    name: Deploy
+    name: Deploy keycloak
     runs-on: ubuntu-latest
     environment: production
 
