--- a/Dockerfile-keycloak
+++ b/Dockerfile-keycloak
@@ -19,4 +19,4 @@ ENV KC_DB_SCHEMA=public
 
 WORKDIR /opt/keycloak
 EXPOSE 8080
-ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start --optimized"]
+ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start"]
